--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
+  "name": "google-fonts",
+  "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "browser-sync": "^2.8.0",
-    "gulp": "^3.8.10",
-    "gulp-changed": "^1.0.0",
-    "gulp-clean-css": "^2.0.10",
-    "gulp-prettify": "^0.3.0",
+    "browser-sync": "^2.24.6",
+    "gulp": "^4.0.0",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean-css": "3.9.4",
     "gulp-pug": "^2.0.0",
-    "gulp-sass": "^2.0.1",
-    "gulp-util": "^3.0.1"
+    "gulp-sass": "4.0.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "gulp-prettify": "^0.5.0"
+  }
 }
